Should solve Thought input field sizing problem on mobile browsers. The size of the input field is not fixed.

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -106,6 +106,10 @@ textarea
   @extend input
   background-color: $color-dim-grey
   font-family: $font-main
+  width: 210px
+  height: 225px
+.thought-add-button
+  float: right
 .title-entry
   font-size: $size-big
   width: 95%
